[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/objCostRes.gd" type="Script" id=1]
[ext_resource path="res://Assets/Resources/img_clay.png" type="Texture" id=2]
[ext_resource path="res://Scenes/CraftingScene/labResInv.gd" type="Script" id=3]

[node name="ctnCostRes" type="HBoxContainer"]
margin_top = 56.0
margin_right = 144.0
margin_bottom = 106.0
custom_constants/separation = -4
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labResInv" type="Label" parent="." groups=[
"grpInvUI",
]]
margin_top = 25.0
margin_right = 34.0
margin_bottom = 39.0
text = "temp"
script = ExtResource( 3 )

[node name="labResAmount" type="Label" parent="."]
margin_left = 30.0
margin_top = 25.0
margin_right = 51.0
margin_bottom = 39.0
text = "/12"

[node name="texResImg" type="TextureRect" parent="."]
margin_left = 47.0
margin_right = 111.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 2 )
stretch_mode = 6
